--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "algolia-places-react": "^1.6.1",
     "antd": "^4.21.6",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
