--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,13 @@
     "dotenv": "^16.0.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
+    "express-formidable": "^1.2.0",
+    "express-jwt": "^7.7.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "query-string": "^7.1.1",
+    "stripe": "^9.13.0"
   }
 }
